=== 0.1.2 - January 29, 2006

Client:

* Better error handling.
* Rework of display system.
* When loading a folder, "Loading..." is displayed where the children 
  will go.
* Support IDs with special characters.
* Support for Windows-like expand/collapse icons
   
Rails Server:

* Support non-numeric IDs.
* Ability to easily serve data from non-ActiveRecord models.
    
Demos:

* Added demos for nested set, alternate field names, non-model data, and custom data 
  action.
  
Documentation:

* Added documentation for working with +acts_as_nested_set+ models, non-ActiveRecord
  model data, and custom data actions.

=== 0.1.1 - January 16, 2006

Rails Server:

* Packaged code as a plugin.
* Added +get_item_children_proc+ option.
* Added +get_item_parent_proc+ option.

=== 0.1 - July 13, 2005

* Initial version