@@ -211,6 +211,11 @@
             </li>
           
             <li>
+              <h2><a href="/file_system">File System</a></h2>
+              <p>Browse the file system tree.</p>
+            </li>
+          
+            <li>
               <h2><a href="/nested_set">Nested Set</a></h2>
               <p>How to populate a tree from data in a table that <tt>acts_as_nested_set</tt>.</p>
             </li>
